--- a/med-app/package.json
+++ b/med-app/package.json
@@ -20,7 +20,8 @@
     "openai": "^6.7.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
