--- a/med-app/package.json
+++ b/med-app/package.json
@@ -12,6 +12,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.6",
+    "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.24",
