--- a/med-app/package.json
+++ b/med-app/package.json
@@ -28,6 +28,7 @@
     "prisma": "^5.22.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.1.13"
   },
