--- a/med-app/package.json
+++ b/med-app/package.json
@@ -21,6 +21,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "iron-session": "^8.0.4",
     "lucide-react": "^0.552.0",
     "next": "16.0.7",
     "next-intl": "^4.5.8",
